# anycode

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PROJECT_TREE.txt  README.md  README.zh.md  WORKBENCH.md
apps/anycode-desktop/: .gitignore  Cargo.toml  Info.plist  README.md  build.rs  loading.html  tauri.conf.json
apps/anycode-desktop/browser-mcp/: package-lock.json  package.json  run.sh
apps/anycode-desktop/capabilities/: default.json
apps/anycode-desktop/icons/: icon.icns
apps/anycode-desktop/native/anycode-apple-media/: Package.swift
apps/anycode-desktop/permissions/: apple-media.toml
apps/anycode-desktop/src/: apple_media.rs  main.rs
crates/agent/: Cargo.toml  README.md
crates/agent/src/: agent_profiles.rs  agent_test_mod.inc  agents.rs  declarative_agent.rs  goal_engine.rs  lib.rs  model_instructions.rs  nested_model.rs  prompt_assembler.rs  system_prompt.rs  workspace_assistant.rs
crates/agent/src/compact/: checkpoint.rs  hooks.rs  microcompact.rs  mod.rs  policy.rs  post_compact.rs  snippets.rs  state.rs
crates/agent/src/runtime/: agentic_loop.rs  agentic_turn.rs  artifacts.rs  budget.rs  evidence.rs  execute_goal.rs  execute_task.rs  execute_tool.rs  execute_turn.rs  failover.rs  limits.rs  llm_retry.rs  logging.rs  memory_hooks.rs  mod.rs  nested_task.rs  nested_worktree.rs  plan_tree_context.rs  provider_errors.rs  receipt.rs  runtime_options.rs  session.rs  session_activity.rs  session_notify.rs  task_summary.rs  tool_audit.rs  tool_dispatch.rs  tool_gating.rs  (+4 more)
crates/agent/tests/: stability.rs
crates/apple-media/: Cargo.toml
crates/apple-media/src/: lib.rs
crates/channels/: Cargo.toml
crates/channels/src/: hub.rs  lib.rs  profile.rs  web_envelope.rs  wechat.rs
crates/cli/: Cargo.toml
crates/cli/examples/: reedline_spike.rs
crates/cli/src/: app_config.rs  app_config_schema.rs  apple_media.rs  artifact_summary.rs  ask_user_host.rs  builtin_agents.rs  channel_task.rs  cli_args.rs  copilot_auth.rs  cron_failure.rs  daemon_http.rs  discord_channel.rs  eval_manifest.rs  i18n.rs  main.rs  md_render.rs  md_tui.rs  memory_embedding_setup.rs  model_interactive.rs  repl_banner.rs  repl_clipboard.rs  repl_inline.rs  repl_stream_ratatui.rs  repl_stream_viewport.rs  resize_debounce.rs  scheduler.rs  session_transcript_export.rs  setup_memory.rs  slash_commands.rs  task_builders.rs  tasks.rs  tasks_workflow.rs  text_file_prompt.rs  tg.rs  tg_ask.rs  tool_policy.rs  vision_prompt.rs  wechat.rs  wechat_ilink.rs  wechat_service.rs  (+2 more)
crates/cli/tests/: cli_e2e_mock_llm.rs  cli_smoke.rs  eval_mock.rs
crates/core/: Cargo.toml
crates/core/src/: agent_type.rs  channel.rs  error.rs  execution_trace.rs  feature_flags.rs  goal.rs  ids.rs  lib.rs  llm_retry_observer.rs  llm_types.rs  memory_model.rs  memory_pipeline.rs  message.rs  model_profile.rs  plan_tree.rs  query_source.rs  reasoning.rs  runtime_profile.rs  secret_ref.rs  security_policy.rs  session_notification.rs  slash_command.rs  task.rs  task_gate_log.rs  task_output.rs  tool_catalog.rs  traits.rs  vision.rs  workflow.rs
crates/dashboard/: Cargo.toml  README.md  build.rs
crates/dashboard/migrations/: 001_init.sql  002_audit_reports.sql  003_production.sql  004_session_ssot.sql  005_agent_profiles.sql  006_project_knowledge.sql  007_skill_category.sql  008_session_block_ack.sql  009_artifact_is_final.sql  010_project_metadata.sql  011_skill_i18n.sql
crates/dashboard/resources/: browser-session.mjs
crates/dashboard/src/: asset_index.rs  assets.rs  audit.rs  auth_session.rs  bootstrap.rs  browser_connector.rs  config_patch.rs  connector_health.rs  cron_ledger.rs  data_health.rs  db_ops.rs  embedded_ui.rs  events.rs  lib.rs  llm_probe.rs  local_service.rs  mcp_config.rs  media_defaults.rs  memory_ops.rs  model_identity.rs  notifications.rs  notify.rs  preferences.rs  project_knowledge.rs  project_root.rs  project_skills.rs  recorder.rs  report.rs  report_archive.rs  runtime_config.rs  schema.rs  search.rs  server.rs  skill_market.rs  skill_meta.rs  skill_suggestions.rs  skills_scan.rs  static_ui.rs  test_util.rs  tokens.rs  (+2 more)
crates/dashboard/tests/: assets_unified.rs  fixture_api.rs  recorder_e2e.rs
crates/llm/: Cargo.toml
crates/llm/src/: capability_catalog.rs  catalog_service.rs  chat_model_ref.rs  cloud_session.rs  config_file.rs  config_models.rs  copilot_token.rs  deepseek_catalog.rs  google_catalog.rs  http_retry.rs  lib.rs  local_media_catalog.rs  model_cache.rs  model_catalog.rs  model_context.rs  model_registry.rs  model_router.rs  multi_client.rs  provider_catalog.rs  retry_strategy.rs  sse_data_lines.rs  vision_format.rs  whisper_model_fetch.rs
crates/memory/: Cargo.toml  README.md
crates/memory/src/: buffer_wal.rs  embedding_fastembed.rs  embedding_http.rs  lib.rs  pipeline.rs  retrieval.rs  vector_sled.rs
crates/onboard/: Cargo.toml
crates/onboard/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: approval_presenter.rs  lib.rs
crates/setup/: Cargo.toml
crates/setup/src/: channel_probe.rs  channels.rs  config.rs  lib.rs  memory.rs  quick_auth.rs  status.rs  wechat_ilink.rs  workspace.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent_tools.rs  ask_user_question_host.rs  bash.rs  catalog.rs  claude_rules.rs  cron_schedule.rs  edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  knowledge_index.rs  knowledge_scoring.rs  knowledge_tools.rs  knowledge_vectors.rs  lib.rs  limits.rs  lsp_root_uri.rs  lsp_stdio.rs  lsp_tool.rs  mcp_connected.rs  mcp_legacy_sse_session.rs  mcp_normalization.rs  mcp_oauth_login.rs  mcp_oauth_store.rs  mcp_proxied_tool.rs  mcp_read_timeout.rs  mcp_rmcp_session.rs  mcp_session.rs  mcp_stdio.rs  mcp_tool_scan.rs  mcp_tools.rs  media_tools.rs  mode_tools.rs  notebook_edit.rs  orchestration.rs  paths.rs  permission_rule_parser.rs  plan_write.rs  platform_tools.rs  (+12 more)
crates/tools/tests/: skills_catalog.rs
crates/wechat-history/: Cargo.toml
crates/wechat-history/src/: config.rs  date_filter.rs  error.rs  file_parser.rs  format.rs  lib.rs  model.rs  name_resolver.rs  runtime.rs  wc4_appmsg.rs
(+982 files in other folders)
