[workspace]
members = [
    "crates/core",
    "crates/agent",
    "crates/tools",
    "crates/llm",
    "crates/security",
    "crates/channels",
    "crates/memory",
    "crates/onboard",
    "crates/locale",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["anyCode Contributors"]
license = "MIT"
repository = "https://github.com/qingjiuzys/anycode"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sled = "0.34"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }

# CLI
ratatui = "0.24"
crossterm = "0.27"

# HTTP/WebSocket
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-tungstenite = "0.21"
hyper = { version = "0.14", features = ["full"] }

# AI/ML (optional, for future local LLM support)
# candle-core = { version = "0.3", optional = true }

# Tools
walkdir = "2.4"
ignore = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Caching
moka = { version = "0.12", features = ["future"] }

# Filesystem watch (WeChat bridge config hot-reload)
notify = "6.1"

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
