[package]
name = "anycode-apple-media"
version.workspace = true
edition.workspace = true
description = "macOS native media bridge via anycode-apple-media Swift helper"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dirs = "6.0.0"
base64 = "0.22"

[lints]
workspace = true
