[package]
name = "anycode-llm"
version.workspace = true
edition.workspace = true

[dependencies]
anycode-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Event streaming
tokio-stream = "0.1"
futures-util = "0.3"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.129.0"
aws-smithy-types = "1.4"
dirs = "6.0.0"
url = "2.5"
rand = "0.8"

[features]
default = ["anthropic"]
anthropic = []
openai = []
# local = ["candle-core"]  # Disabled until candle is added as a dependency

[lints]
workspace = true
