[package]
name = "anycode-llm"
version.workspace = true
edition.workspace = true

[dependencies]
anycode-apple-media = { path = "../apple-media" }
anycode-core = { path = "../core" }
anycode-memory = { path = "../memory", optional = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
uuid = { workspace = true }
chrono = { workspace = true }

# Event streaming
tokio-stream = "0.1"
futures-util = "0.3"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.129.0"
aws-smithy-types = "1.4"
dirs = "6.0.0"
url = "2.5"
rand = "0.8"
base64 = "0.22"
whisper-cpp-plus = { version = "0.1.4", optional = true }
piper-rs = { version = "0.2", optional = true }

[features]
default = ["anthropic"]
anthropic = []
openai = []
# Local ONNX embeddings (FastEmbed); pairs with provider `local_fastembed`.
embedding-local = ["dep:anycode-memory", "anycode-memory/embedding-local"]
# On-device whisper.cpp (optional; increases compile time).
stt-local = ["dep:whisper-cpp-plus"]
# On-device Piper TTS (optional).
tts-local = ["dep:piper-rs"]
media-local = ["embedding-local", "stt-local", "tts-local"]
# local = ["candle-core"]  # Disabled until candle is added as a dependency

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
