[package]
name = "anycode-memory"
version.workspace = true
edition.workspace = true

[dependencies]
anycode-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
fastembed = { version = "5", optional = true }

# Database
sled = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

# File I/O
walkdir = "2.4"
ignore = "0.4"

# Caching
moka = { workspace = true, features = ["future"] }

[features]
default = ["sled"]
sled = ["dep:sled"]
sqlite = ["dep:sqlx"]
# 本地 ONNX 嵌入（FastEmbed / MiniLM），需 `cargo build -p anycode --features embedding-local`。
embedding-local = ["dep:fastembed"]
# 预留：接入 LanceDB / 远端向量索引时启用，与 `EmbeddingProvider` + `VectorMemoryBackend` 实现联用。
memory-vector = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
