[package]
name = "anycode-onboard"
version.workspace = true
edition.workspace = true

[dependencies]
anycode-core = { path = "../core" }
anycode-llm = { path = "../llm" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { version = "4.4", features = ["derive"] }
ratatui = { workspace = true }
crossterm = { workspace = true }

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5.0"
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Dialog
dialoguer = "0.12"
console = "0.16"
indicatif = "0.17"
