[package]
name = "anycode-security"
version.workspace = true
edition.workspace = true

[dependencies]
anycode-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Regex for pattern matching
regex = "1.10"

# Approval system
tokio-stream = "0.1"
