[package]
name = "anycode-security"
version.workspace = true
edition.workspace = true

[dependencies]
anycode-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Regex for pattern matching
regex = "1.10"

# Home dir resolution (project-level approvals persistence)
dirs = "5"

# CLI tool approval: arrow-key style menu (Claude-like)
dialoguer = "0.12"

# Approval system
tokio-stream = "0.1"

[lints]
workspace = true
