[package]
name = "anycode-tools"
version.workspace = true
edition.workspace = true

[features]
default = []
# 预留：按需关闭重依赖或接入原生 MCP/LSP
tools-http = []
tools-mcp = [
    "dep:rmcp",
    "dep:http",
    "dep:sse-stream",
    "dep:futures-util",
    "rmcp/auth",
]
tools-mcp-oauth = ["tools-mcp", "dep:axum"]
tools-lsp = []

[dependencies]
anycode-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# 与 rmcp 1.3 / oauth2 使用同一 reqwest 0.13，否则 `AuthClient<reqwest::Client>` 与 `StreamableHttpClient` 无法衔接
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
url = "2.5"
urlencoding = "2.1"
uuid = { workspace = true }
base64 = "0.22"
dirs = "5"

# File operations
walkdir = { workspace = true }
ignore = { workspace = true }

# Search / glob
globset = "0.4"
regex = "1.10"

# Legacy MCP：SSE GET + `event: endpoint` 后 POST JSON-RPC（与 OpenClaw `SSEClientTransport` 同类）
sse-stream = { version = "0.2", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }

# MCP：Streamable HTTP（规范层 SSE 响应流）+ 可选 stdio 仍用自建会话
rmcp = { version = "1.3", default-features = false, optional = true, features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
# `tools-mcp-oauth` 通过 `rmcp/auth` 追加 oauth2 与授权管理器
http = { version = "1", optional = true }
axum = { version = "0.8", default-features = false, optional = true, features = [
    "tokio",
    "http1",
    "query",
] }

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
