[package]
name = "anycode-wechat-history"
version.workspace = true
edition.workspace = true
description = "Read-only local WeChat chat history query backends for anyCode agents"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"
md5 = "0.7"
tempfile = "3.10"
calamine = "0.26"
regex = "1.10"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6"

[lints]
workspace = true
